# chst

./: .gitattributes  .gitignore  CMakeLists.txt  README.md  main.cpp
libs/lua/: lua53.lib
setup/: cut  setup  testconfig
setup/appPlugin/houdini/: houdini  htoa.lua
setup/appPlugin/maya/: maya  mtoa.lua
setup/appPlugin/nuke/: nuke
setup/defaultConfig/: config
